--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
     .chip{background:var(--chip);padding:4px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.18);font-size:.85rem}
     .links{display:flex;flex-wrap:wrap;gap:8px;margin-top:6px}
     .linkbtn{font-size:.85rem;background:#0e1a66;color:var(--text);border:1px solid rgba(255,255,255,.22);padding:6px 10px;border-radius:999px;text-decoration:none;box-shadow:var(--glow)}
+
+    /* Provider logo buttons */
+    .logoLinks{display:flex;flex-wrap:wrap;gap:10px;margin-top:6px}
+    .logoLink{
+      display:inline-flex;align-items:center;justify-content:center;
+      width:46px;height:46px;border-radius:12px;
+      background:#0e1a66;border:1px solid rgba(255,255,255,.22);
+      box-shadow:var(--glow);text-decoration:none;overflow:hidden;transition:transform .06s ease
+    }
+    .logoLink:hover{transform:translateY(-1px)}
+    .logoImg{width:38px;height:38px;object-fit:contain;display:block}
+
     .note{color:var(--muted);font-size:.9rem;margin-top:8px}
 
     /* Always-visible genre chips */
@@ -93,7 +105,7 @@
       <div id="homeLogo" class="logo" title="Home">
         <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
           <path d="M12 2 v8"></path>
-          <path d="M5.5 5.5a8 8 0 1 0 13 0"></path>
+          <path d="M5.5 5.5a 8 8 0 1 0 13 0"></path>
         </svg>
       </div>
       <div class="brand" aria-label="StreamDeck">StreamDeck</div>
@@ -119,7 +131,7 @@
           <button id="go">Search</button>
         </div>
 
-        <!-- Randomizer (unchanged from your last good version) -->
+        <!-- Randomizer -->
         <div class="row" style="margin:6px 0 0">
           <select id="randService">
             <option>Netflix</option><option>Hulu</option><option>Disney+</option><option>Max</option>
@@ -153,16 +165,16 @@
             <option value="movie" selected>Movies</option>
             <option value="tv">TV</option>
           </select>
-          <select id="serviceGenre"><!-- filled dynamically --></select>
+          <select id="serviceGenre"><!-- filled on load --></select>
           <input id="serviceQuery" type="search" placeholder="Optional: filter by title…">
           <button id="serviceGo">Search This Service</button>
         </div>
-        <div class="small">Filters titles available on the selected service in your region (US). Combine with type + genre (+ optional title).</div>
+        <div class="small">Filters titles available on the selected service in your region (US). Combine with type + genre.</div>
         <div id="serviceResults" class="results"></div>
       </div>
     </section>
 
-    <!-- GENRES (always visible list) -->
+    <!-- GENRES (always-visible list) -->
     <section id="genres" class="panel">
       <div class="card">
         <div class="row" style="margin-bottom:10px">
@@ -189,7 +201,7 @@
       </div>
     </section>
 
-    <div class="note">Direct provider links aim to open the title on the service; when unavailable, they use a best-match first result on that provider’s site. Availability varies by region/account.</div>
+    <div class="note">Provider buttons open the service with the title pre-searched (using year to disambiguate). Availability varies by region/account.</div>
   </div>
 
   <script>
@@ -205,12 +217,39 @@
     const safe = (s) => (s||"").replace(/</g,"&lt;").replace(/>/g,"&gt;");
     const norm = (name) => (name||"").replace(/\s*\+\s*/g,"+").replace(/ plus$/i,"+").replace(/\s+/g," ").trim();
 
-    /* ====== FALLING POSTERS ====== */
+    /* ====== SVG badge helpers (logo buttons) ====== */
+    function svgDataURI(svg){ return 'data:image/svg+xml;utf8,' + encodeURIComponent(svg); }
+    function badgeSVG({bg="#111", fg="#fff", text="?"}){
+      return `
+        <svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" viewBox="0 0 120 120">
+          <rect rx="24" ry="24" x="4" y="4" width="112" height="112" fill="${bg}"/>
+          <text x="50%" y="54%" dominant-baseline="middle" text-anchor="middle"
+                font-family="Inter,Segoe UI,Arial" font-size="44" fill="${fg}" font-weight="800">${text}</text>
+        </svg>`;
+    }
+    function providerLogo(name){
+      const n = (name||"").trim().toLowerCase();
+      if (n==="netflix")        return {src: svgDataURI(badgeSVG({bg:"#e50914", fg:"#fff", text:"N"})), alt:"Netflix"};
+      if (n==="hulu")           return {src: svgDataURI(badgeSVG({bg:"#1ce783", fg:"#03120b", text:"h"})), alt:"Hulu"};
+      if (n==="disney+")        return {src: svgDataURI(badgeSVG({bg:"#113ccf", fg:"#fff", text:"D+"})), alt:"Disney+"};
+      if (n==="max")            return {src: svgDataURI(badgeSVG({bg:"#6e55ff", fg:"#fff", text:"Max"})), alt:"Max"};
+      if (n==="amazon prime video" || n==="prime video" || n==="amazon video")
+                                return {src: svgDataURI(badgeSVG({bg:"#00a8e1", fg:"#031b24", text:"PV"})), alt:"Prime Video"};
+      if (n==="apple tv+" || n==="apple tv plus" || n==="appletv+")
+                                return {src: svgDataURI(badgeSVG({bg:"#111", fg:"#fff", text:"TV+"})), alt:"Apple TV+"};
+      if (n==="peacock")        return {src: svgDataURI(badgeSVG({bg:"#111", fg:"#ffd166", text:"P"})), alt:"Peacock"};
+      if (n==="paramount+")     return {src: svgDataURI(badgeSVG({bg:"#0064ff", fg:"#fff", text:"P+"})), alt:"Paramount+"};
+      if (n==="crunchyroll")    return {src: svgDataURI(badgeSVG({bg:"#ff7f00", fg:"#101010", text:"cr"})), alt:"Crunchyroll"};
+      const initials = name?.split(/\s+/).map(w=>w[0]).join("").slice(0,3).toUpperCase() || "?";
+      return {src: svgDataURI(badgeSVG({bg:"#2b3277", fg:"#fff", text:initials})), alt:name||"Provider"};
+    }
+
+    /* ====== Falling posters ====== */
     let postersSpawned = false;
     async function spawnFallingPosters(){
       try{
         const bg = document.getElementById('falling-bg');
-        bg.innerHTML = ""; // reset before spawning
+        bg.innerHTML = "";
         const res = await fetch(`${TMDB_BASE}/trending/movie/day`, auth);
         const data = await res.json();
         const items = (data.results||[]).filter(x=>x.poster_path).slice(0,24);
@@ -241,12 +280,10 @@
     }
     function ensureFallingPosters(){
       const bg = document.getElementById('falling-bg');
-      if (!postersSpawned || !bg || bg.childElementCount === 0) {
-        spawnFallingPosters();
-      }
+      if (!postersSpawned || !bg || bg.childElementCount === 0) spawnFallingPosters();
     }
 
-    /* ====== PROVIDER DIRECT LINKS ====== */
+    /* ====== Provider deep links ====== */
     function providerDomainGuess(n){
       if (n==="Netflix") return "netflix.com";
       if (n==="Hulu") return "hulu.com";
@@ -284,12 +321,23 @@
         const key = norm(p.provider_name).toLowerCase();
         if(seen.has(key)) return; seen.add(key);
         const url = providerTitleURL(p.provider_name, title, year);
-        btns.push(`<a class="linkbtn" target="_blank" rel="noopener" href="${url}">Open on ${safe(p.provider_name)}</a>`);
+        const {src, alt} = providerLogo(p.provider_name);
+        btns.push(`
+          <a class="logoLink" target="_blank" rel="noopener" href="${url}" title="Open on ${safe(p.provider_name)}">
+            <img class="logoImg" src="${src}" alt="${safe(alt)}"/>
+          </a>
+        `);
       });
       if (!btns.length) {
-        btns.push(`<a class="linkbtn" target="_blank" rel="noopener" href="https://www.google.com/search?q=${encodeURIComponent(`"${title}" ${year||""} watch`) }">Find streaming options</a>`);
+        btns.push(`
+          <a class="logoLink" target="_blank" rel="noopener"
+             href="https://www.google.com/search?q=${encodeURIComponent(`"${title}" ${year||""} watch`) }"
+             title="Find streaming options">
+            <img class="logoImg" src="${svgDataURI(badgeSVG({bg:'#0e1a66', fg:'#fff', text:'?' }))}" alt="Find options"/>
+          </a>
+        `);
       }
-      return btns.join("");
+      return `<div class="logoLinks">${btns.join("")}</div>`;
     }
     function resultTile(item, prov){
       const title = item.title || item.name || "Untitled";
@@ -308,8 +356,8 @@
             }</div>
             <div class="links">
               ${us.link ? `<a class="linkbtn" target="_blank" rel="noopener" href="${us.link}">Watch options</a>` : ""}
-              ${providerButtons(title, y, us)}
             </div>
+            ${providerButtons(title, y, us)}
           </div>
         </div>`;
     }
@@ -339,13 +387,9 @@
       const el = e.currentTarget;
       const id = el.dataset.id;
       const title = el.dataset.title || "";
-      const year = el.dataset.year || "";
-      // Switch to Search tab, prefill + set type Movie
       activateTab("search");
       document.getElementById("q").value = title;
       document.getElementById("searchType").value = "movie";
-
-      // Prefer exact title by ID; if available, render that first
       const out = document.getElementById("searchResults");
       out.innerHTML = "<div class='small'>Loading…</div>";
       try{
@@ -353,8 +397,7 @@
         const prov = await getProviders(id, "movie");
         out.innerHTML = resultTile({...details, media_type:"movie"}, prov);
       }catch(_){}
-      // Also run normal search for surrounding matches
-      doSearch();
+      doSearch(); // also run a general search for nearby matches
     }
 
     /* ====== GENRES (always visible) ====== */
@@ -365,8 +408,8 @@
       ]);
       window.__genres = { movie:(gm.genres||[]), tv:(gt.genres||[]) };
       renderGenreChips();
-      seedRandomGenreSelects(); // for Randomizer & Service tab
-      populateServiceGenres();  // INITIAL fill for Service tab
+      seedRandomGenreSelects();
+      populateServiceGenres();  // initial fill for Service tab
     }
     function renderGenreChips(){
       const type = document.getElementById("genreType").value;
@@ -396,7 +439,7 @@
       }
     }
 
-    /* ====== BY SERVICE — FIXED GENRE SELECTION ====== */
+    /* ====== BY SERVICE — fixed genre selection ====== */
     let provLoaded = false;
     async function loadProviderIds(){
       if (provLoaded) return;
@@ -410,7 +453,6 @@
       provLoaded = true;
     }
     function populateServiceGenres(){
-      // preserve current selection if present
       const sel = document.getElementById("serviceGenre");
       const prev = sel.value || "";
       const type = document.getElementById("serviceType").value;
@@ -421,23 +463,19 @@
       (window.__genres?.[type]||[]).forEach(g=>{
         const o = document.createElement("option"); o.value=g.id; o.textContent=g.name; sel.appendChild(o);
       });
-      // restore previous if still valid
       if ([...sel.options].some(o=>o.value===prev)) sel.value = prev;
     }
     async function doServiceSearch(){
       await loadProviderIds();
-      // DO NOT repopulate genres here (bug fix) — use the user's current selection
       const serviceName = norm(document.getElementById("servicePicker").value);
       const type = document.getElementById("serviceType").value;
-      const genreId = document.getElementById("serviceGenre").value; // respected now
-      const keyword = document.getElementById("serviceQuery").value.trim();
+      const genreId = document.getElementById("serviceGenre").value;
       const out = document.getElementById("serviceResults");
       out.innerHTML = `<div class='small'>Searching ${safe(serviceName)} ${type.toUpperCase()}…</div>`;
       const provId = (type==="movie"?window.__provMovie:window.__provTV)[serviceName];
       if(!provId){ out.innerHTML = `<div class='small'>Provider not supported for ${type.toUpperCase()} in ${REGION}.</div>`; return; }
       let url = `${TMDB_BASE}/discover/${type}?watch_region=${REGION}&with_watch_providers=${provId}&sort_by=popularity.desc`;
       if (genreId) url += `&with_genres=${genreId}`;
-      // (Note: TMDB discover "with_keywords" expects IDs; we skip free-text keywords for accuracy)
       const data = await fetch(url, auth).then(r=>r.json()).catch(()=>({results:[]}));
       out.innerHTML = "";
       const items = data.results||[];
@@ -449,16 +487,15 @@
     }
     document.getElementById("serviceType").addEventListener("change", populateServiceGenres);
 
-    /* ====== RANDOMIZER (unchanged logic) ====== */
+    /* ====== RANDOMIZER ====== */
     function seedRandomGenreSelects(){
       const sel = document.getElementById("randGenre");
-      const type = document.getElementById("randType").value; // movie|tv
+      const type = document.getElementById("randType").value;
       sel.innerHTML = `<option value="">Any genre</option>`;
       (window.__genres?.[type]||[]).forEach(g=>{
         const o = document.createElement("option"); o.value=g.id; o.textContent=g.name; sel.appendChild(o);
       });
     }
-    document.getElementById("randType").addEventListener("change", seedRandomGenreSelects);
     async function randomizePick(){
       await loadProviderIds();
       if(!window.__genres) await loadGenres();
@@ -483,7 +520,7 @@
       out.scrollIntoView({behavior:"smooth", block:"start"});
     }
 
-    /* ====== ACTORS (kept) ====== */
+    /* ====== ACTORS ====== */
     function isMainRole(c){ return typeof c.order === "number" ? c.order <= 5 : false; }
     function splitRoles(credits){
       const movies = (credits.cast||[]).filter(r => r.media_type === "movie");
@@ -556,16 +593,22 @@
     function activateTab(id){
       document.querySelectorAll(".tabbtn").forEach(x=>x.classList.toggle("active", x.dataset.tab===id));
       document.querySelectorAll(".panel").forEach(p=>p.classList.toggle("active", p.id===id));
-      if(id==="search"){ ensureFallingPosters(); } // keep the raining covers alive
+      if(id==="search"){ ensureFallingPosters(); }
       window.scrollTo({top:0,behavior:"smooth"});
     }
-    document.querySelectorAll(".tabbtn").forEach(b=> b.addEventListener("click", ()=>{ activateTab(b.dataset.tab); if(b.dataset.tab==="service"){ /* no repopulate here; we preserve selection */ } }));
-    document.getElementById("homeLogo").addEventListener("click", ()=>{
-      activateTab("search");
-      document.getElementById("q").value=""; document.getElementById("searchResults").innerHTML=""; document.getElementById("randomResult").innerHTML="";
-    });
 
     /* ====== EVENTS ====== */
+    document.querySelectorAll(".tabbtn").forEach(b=> b.addEventListener("click", ()=>{
+      activateTab(b.dataset.tab);
+      if(b.dataset.tab==="service"){ /* keep selection; genres already populated */ }
+    }));
+    document.getElementById("homeLogo").addEventListener("click", ()=>{
+      activateTab("search");
+      document.getElementById("q").value="";
+      document.getElementById("searchResults").innerHTML="";
+      document.getElementById("randomResult").innerHTML="";
+    });
+
     document.getElementById("go").addEventListener("click", doSearch);
     document.getElementById("q").addEventListener("keydown", e=>{ if(e.key==="Enter") doSearch(); });
 
@@ -575,24 +618,22 @@
     document.getElementById("serviceType").addEventListener("change", populateServiceGenres);
     document.getElementById("serviceQuery").addEventListener("keydown", e=>{ if(e.key==="Enter") doServiceSearch(); });
 
-    // Actor search hooks
     document.getElementById("actorGo").addEventListener("click", ()=>runActorSearch(document.getElementById("actorQuery").value.trim()));
     document.getElementById("actorQuery").addEventListener("keydown", e=>{ if(e.key==="Enter") runActorSearch(e.target.value.trim()); });
 
-    // Randomizer
     document.getElementById("randGo").addEventListener("click", randomizePick);
     document.getElementById("randType").addEventListener("change", seedRandomGenreSelects);
 
     /* ====== INIT ====== */
-    spawnFallingPosters(); // initial
-    loadGenres();          // seeds genres (genres tab, randomizer, and first-time service list)
+    spawnFallingPosters();
+    loadGenres();
     (async()=>{ await loadProviderIds(); })(); // warm provider maps
   </script>
 
   <!-- PWA SW registration; bump query to bust cache if updating -->
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js?v=streamdeck-fixes-genre-home-posters-1').catch(()=>{});
+      navigator.serviceWorker.register('sw.js?v=streamdeck-logos-v1').catch(()=>{});
     }
   </script>
 </body>
